--- a/RandomEvents/RandomEvents/ModuleData/RandomEvents_EventConfiguration.ini
+++ b/RandomEvents/RandomEvents/ModuleData/RandomEvents_EventConfiguration.ini
@@ -16,6 +16,8 @@ MinimumRealMinutes = 5
 MaximumRealMinutes = 30
 LevelXpMultiplier = 40
 DisableSupernatural = false
+DisableSciFi = false
+DisableEvil = false
 DisableSkillChecks = false
 DistinctEventCycleLength = 5
 MaxQueueDisplayCount = 5
