Added files for new events, Updated translations file, Moved namespace to a name better fitting

--- a/RandomEvents/RandomEvents/ModuleData/RandomEvents_EventConfiguration.ini
+++ b/RandomEvents/RandomEvents/ModuleData/RandomEvents_EventConfiguration.ini
@@ -291,6 +291,22 @@ EventDisabled = false
 
 
 
+; #######################
+; ###    AiEvents     ###
+; #######################
+[CostOfBetrayal]
+EventDisabled = false
+MinBaseMoraleLoss = 15
+MaxBaseMoraleLoss = 25
+
+[PriceOfRebellion]
+EventDisabled = false
+MinBaseMoraleLoss = 15
+MaxBaseMoraleLoss = 25
+MinRenownGain = 25
+MaxRenownGain = 75
+MinRogueryLevel = 100
+
 ; ####################
 ; ### Other Events ###
 ; ####################
